--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,10 +1,10 @@
 # jdbc
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/projectcar
+jdbc.url=jdbc:mysql://localhost:3306/projectcar?serverTimezone=Europe/Minsk&useSSL=false
 jdbc.username=root
 jdbc.password=root
 
 # hibernate
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
