--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
@@ -125,7 +131,6 @@
             <artifactId>jta</artifactId>
             <version>1.1</version>
         </dependency>
-
 
 
     </dependencies>
