--- a/pom.xml
+++ b/pom.xml
@@ -126,8 +126,11 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.2.5.RELEASE</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-dbcp</artifactId>
+            <version>9.0.10</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
