--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>5.4.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-search-orm</artifactId>
+            <version>5.4.0.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
