--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -8,3 +8,5 @@ jdbc.password=root
 hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
+hibernate.search.default.directory_provider=filesystem
+hibernate.search.default.indexBase=/entity/lucene/indexes
