method editUser and editPassword

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,16 @@
 # уровень логирования
-log4j.rootLogger=INFO, file
+log4j.rootLogger=INFO,console, file
 # апендер для работы с файлами
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # путь лог файла
 log4j.appender.file.File=C:\\Projects\\examples\\ProjectCar\\target\\log_file.log
 # максимальный размер файла с логами
-log4j.appender.file.MaxFileSize=1MB
+log4j.appender.file.MaxFileSize=5MB
 # шаблон вывода логов в файл
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# appender for console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+# pattern for logs in console
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %m%n
