--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>hibernate-search-orm</artifactId>
             <version>5.11.5.Final</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>javax.servlet</groupId>-->
         <!--<artifactId>jstl</artifactId>-->
