--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -92,160 +98,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <!--<dependencies>-->
-
-
-    <!--<dependency>-->
-    <!--<groupId>org.hibernate</groupId>-->
-    <!--<artifactId>hibernate-core</artifactId>-->
-    <!--<version>5.4.12.Final</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.hibernate</groupId>-->
-    <!--<artifactId>hibernate-entitymanager</artifactId>-->
-    <!--<version>5.4.12.Final</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.hibernate</groupId>-->
-    <!--<artifactId>hibernate-validator</artifactId>-->
-    <!--<version>5.4.1.Final</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.hibernate</groupId>-->
-    <!--<artifactId>hibernate-search-orm</artifactId>-->
-    <!--<version>5.11.5.Final</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>javax.servlet</groupId>-->
-    <!--<artifactId>jstl</artifactId>-->
-    <!--<version>1.2</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>javax.servlet</groupId>-->
-    <!--<artifactId>javax.servlet-api</artifactId>-->
-    <!--<version>4.0.1</version>-->
-    <!--<scope>provided</scope>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework</groupId>-->
-    <!--<artifactId>spring-core</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework</groupId>-->
-    <!--<artifactId>spring-webmvc</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework</groupId>-->
-    <!--<artifactId>spring-web</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework</groupId>-->
-    <!--<artifactId>spring-context</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-    <!--&lt;!&ndash;<groupId>org.springframework.boot</groupId>&ndash;&gt;-->
-    <!--&lt;!&ndash;<artifactId>spring-boot-starter-security</artifactId>&ndash;&gt;-->
-    <!--&lt;!&ndash;<version>2.2.5.RELEASE</version>&ndash;&gt;-->
-    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<dependency>&ndash;&gt;-->
-    <!--&lt;!&ndash;<groupId>org.springframework.boot</groupId>&ndash;&gt;-->
-    <!--&lt;!&ndash;<artifactId>spring-boot-starter-web</artifactId>&ndash;&gt;-->
-    <!--&lt;!&ndash;<version>2.2.5.RELEASE</version>&ndash;&gt;-->
-    <!--&lt;!&ndash;</dependency>&ndash;&gt;-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.security</groupId>-->
-    <!--<artifactId>spring-security-core</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.security</groupId>-->
-    <!--<artifactId>spring-security-web</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.security</groupId>-->
-    <!--<artifactId>spring-security-config</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.security</groupId>-->
-    <!--<artifactId>spring-security-taglibs</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework</groupId>-->
-    <!--<artifactId>spring-orm</artifactId>-->
-    <!--<version>${spring.version}</version>-->
-    <!--</dependency>-->
-
-    <!--<dependency>-->
-    <!--<groupId>org.springframework.data</groupId>-->
-    <!--<artifactId>spring-data-jpa</artifactId>-->
-    <!--<version>2.2.5.RELEASE</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.apache.tomcat</groupId>-->
-    <!--<artifactId>tomcat-dbcp</artifactId>-->
-    <!--<version>9.0.10</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>log4j</groupId>-->
-    <!--<artifactId>log4j</artifactId>-->
-    <!--<version>1.2.17</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.slf4j</groupId>-->
-    <!--<artifactId>slf4j-api</artifactId>-->
-    <!--<version>1.7.30</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>org.slf4j</groupId>-->
-    <!--<artifactId>slf4j-nop</artifactId>-->
-    <!--<version>1.7.30</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-    <!--<groupId>javax.transaction</groupId>-->
-    <!--<artifactId>jta</artifactId>-->
-    <!--<version>1.1</version>-->
-    <!--</dependency>-->
-
-
-    <!--</dependencies>-->
-
-    <!--<build>-->
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-war-plugin</artifactId>-->
-    <!--<version>2.1.1</version>-->
-    <!--<configuration>-->
-    <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-    <!--</build>-->
-
 
 </project>
