--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.search.default.indexBase=/var/lucene/indexes
 #JSP
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
+#create auto records spring table in DB
+#spring.session.jdbc.initialize-schema=embedded
+#spring.session.jdbc.table-name=SPRING_SESSION
