corrected path log file in properties

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=INFO,console, file
 # апендер для работы с файлами
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # путь лог файла
-log4j.appender.file.File=C:\\Projects\\examples\\ProjectCar\\target\\log_file.log
+log4j.appender.file.File=target/log_file.log
 # максимальный размер файла с логами
 log4j.appender.file.MaxFileSize=5MB
 # шаблон вывода логов в файл
